# promise

./: .clang-format  .gitignore  CMakeLists.txt  buildall  buildnrun  buildntest  dependencies.cmake  requirements.md  specifications.md
src/: CMakeLists.txt  main.cpp
src/include/: functionhook.h  hook.h  hook_helper.h  optional.h  promise.h
test/: CMakeLists.txt  functionhook.cpp  hook.cpp  idhook.cpp  main.cpp  movinghook.cpp  optional.cpp  promise.cpp  rangewaiting.cpp  suspensionpoint.cpp
