cmake_minimum_required(VERSION 3.10)
cmake_policy(SET CMP0077 NEW)
project(Promise)
set(CMAKE_DEBUG_POSTFIX d)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
file(MAKE_DIRECTORY bin)
include(FetchContent)
set(FETCHCONTENT_QUIET off)
include("dependencies.cmake" OPTIONAL)
include("generated.cmake" REQUIRED)
add_subdirectory(src)
add_subdirectory(test)
