cmake_minimum_required(VERSION 3.10)
cmake_policy(SET CMP0077 NEW)
project(Promise)
set(CMAKE_DEBUG_POSTFIX d)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
file(MAKE_DIRECTORY bin)
include(FetchContent)
set(FETCHCONTENT_QUIET off)
include("dependencies.cmake" OPTIONAL)
include("generated.cmake" REQUIRED)
add_subdirectory(src)
add_subdirectory(test)
install(TARGETS promise_lib promise_options ${all_libraries} EXPORT promiseTargets)
export(EXPORT promiseTargets
    FILE "${CMAKE_CURRENT_SOURCE_DIR}/build.cmake"
    NAMESPACE promise::)
